[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/Objects/Spikes/spike_steer.png" type="Texture" id=1]
[ext_resource path="res://src/Effects/Textures/simple_gradient3.png" type="Texture" id=2]
[ext_resource path="res://src/Effects/Materials/deathwall_mat.tres" type="Material" id=4]
[ext_resource path="res://src/Objects/Spike.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/Bosses/Lumine/DeathWall.gd" type="Script" id=6]
[ext_resource path="res://src/Effects/Textures/feathers.png" type="Texture" id=7]
[ext_resource path="res://src/Effects/Materials/feather_mat.tres" type="Material" id=8]
[ext_resource path="res://src/Effects/Materials/3feather.tres" type="Material" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 16, 121.5 )

[node name="DeathWall" type="Node2D"]
z_index = 20
script = ExtResource( 6 )

[node name="visuals" type="Node2D" parent="."]

[node name="bg" type="Sprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
material = ExtResource( 4 )
position = Vector2( 158, 3.0007 )
rotation = -1.5708
scale = Vector2( 6, 6 )
z_index = 4
texture = ExtResource( 2 )

[node name="spikes" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -97.9993 )
frames = SubResource( 11 )
frame = 6
speed_scale = 0.8
playing = true

[node name="spikes2" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -69.9993 )
frames = SubResource( 11 )
frame = 6
speed_scale = 0.8
playing = true

[node name="spikes3" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -41.9993 )
frames = SubResource( 11 )
frame = 6
speed_scale = 0.8
playing = true

[node name="spikes4" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -13.9993 )
frames = SubResource( 11 )
frame = 6
speed_scale = 0.8
playing = true

[node name="spikes5" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, 14.0007 )
frames = SubResource( 11 )
frame = 6
speed_scale = 0.8
playing = true

[node name="spikes6" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, 42.0007 )
frames = SubResource( 11 )
frame = 6
speed_scale = 0.8
playing = true

[node name="spikes7" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, 70.0007 )
frames = SubResource( 11 )
frame = 6
speed_scale = 0.8
playing = true

[node name="spikes8" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, 98.0007 )
frames = SubResource( 11 )
frame = 6
speed_scale = 0.8
playing = true

[node name="spikes9" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 30, -113.999 )
frames = SubResource( 11 )
frame = 2
speed_scale = 0.8
playing = true

[node name="spikes10" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 30, -85.9993 )
frames = SubResource( 11 )
frame = 2
speed_scale = 0.8
playing = true

[node name="spikes11" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 30, -57.9993 )
frames = SubResource( 11 )
frame = 2
speed_scale = 0.8
playing = true

[node name="spikes12" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 30, -29.9993 )
frames = SubResource( 11 )
frame = 2
speed_scale = 0.8
playing = true

[node name="spikes13" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 30, -1.9993 )
frames = SubResource( 11 )
frame = 2
speed_scale = 0.8
playing = true

[node name="spikes14" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 30, 26.0007 )
frames = SubResource( 11 )
frame = 2
speed_scale = 0.8
playing = true

[node name="spikes15" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 30, 54.0007 )
frames = SubResource( 11 )
frame = 2
speed_scale = 0.8
playing = true

[node name="spikes16" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 30, 82.0007 )
frames = SubResource( 11 )
frame = 2
speed_scale = 0.8
playing = true

[node name="spikes17" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 30, 110.001 )
frames = SubResource( 11 )
frame = 4
speed_scale = 0.8
playing = true

[node name="spikes18" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 60, -97.9993 )
frames = SubResource( 11 )
frame = 9
speed_scale = 0.8
playing = true

[node name="spikes19" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 60, -69.9993 )
frames = SubResource( 11 )
frame = 9
speed_scale = 0.8
playing = true

[node name="spikes20" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 60, -41.9993 )
frames = SubResource( 11 )
frame = 9
speed_scale = 0.8
playing = true

[node name="spikes21" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 60, -13.9993 )
frames = SubResource( 11 )
frame = 9
speed_scale = 0.8
playing = true

[node name="spikes22" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 60, 14.0007 )
frames = SubResource( 11 )
frame = 9
speed_scale = 0.8
playing = true

[node name="spikes23" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 60, 42.0007 )
frames = SubResource( 11 )
frame = 9
speed_scale = 0.8
playing = true

[node name="spikes24" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 60, 70.0007 )
frames = SubResource( 11 )
frame = 9
speed_scale = 0.8
playing = true

[node name="spikes25" type="AnimatedSprite" parent="visuals"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 60, 98.0007 )
frames = SubResource( 11 )
frame = 9
speed_scale = 0.8
playing = true

[node name="VoidDeathPlane" type="Node2D" parent="."]
modulate = Color( 1, 0, 0.678431, 1 )
position = Vector2( 14, -101.999 )

[node name="area2D" type="Area2D" parent="VoidDeathPlane"]
collision_layer = 0
collision_mask = 10
script = ExtResource( 5 )
type = "void"

[node name="collisionShape2D" type="CollisionShape2D" parent="VoidDeathPlane/area2D"]
position = Vector2( 0, 105.5 )
shape = SubResource( 12 )

[node name="feather_decay" type="Particles2D" parent="."]
material = ExtResource( 8 )
position = Vector2( 52, -12 )
z_index = -25
emitting = false
amount = 105
lifetime = 6.0
one_shot = true
explosiveness = 0.95
randomness = 0.98
visibility_rect = Rect2( -2000, -500, 4000, 1000 )
local_coords = false
process_material = ExtResource( 9 )
texture = ExtResource( 7 )

[connection signal="body_entered" from="VoidDeathPlane/area2D" to="VoidDeathPlane/area2D" method="_on_area2D_body_entered"]
